# assistant-veille-tech

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile.backend  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: chat.py  config.py  db.py  dependencies.py  main.py
app/agents/: veille_agent.py
app/ingest/: cleaning.py  enrich.py  fresh_news.py  news_api.py  scraper.py
app/migrations/: env.py
app/migrations/versions/: 001_create_sessions_and_clients.py
app/models/: __init__.py  ingest.py
app/rag/: llm.py
app/repositories/: __init__.py  ingest_repository.py
app/routers/: chat.py  topics.py  websub.py
app/runtime/: fresh_news.py
app/schemas/: __init__.py  article.py  chat.py  fresh_news.py  topics.py
app/services/: chat_service.py  ingest_service.py  llm_service.py  topics_service.py
app/vector_db/: connection.py  retrieval.py
infrastructure/assistant/: agent.py  tools.py
scripts/: fresnews.py  ingest_cli.py
tests/: conftest.py
tests/acceptance/: test_fresh_news.py
tests/test_routers/: test_agent_endpoints.py  test_health.py  test_websub.py
tests/test_services/: test_enrich.py  test_fresh_news.py  test_ingest_service.py  test_veille_agent.py
tests/test_vector_db/: test_chroma.py
web/: Dockerfile
